; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qede/extr_qede_dcbnl.c_qede_dcbnl_ieee_peer_getpfc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qede/extr_qede_dcbnl.c_qede_dcbnl_ieee_peer_getpfc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ieee_pfc = type { i32 }
%struct.qede_dev = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (i32, %struct.ieee_pfc*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ieee_pfc*)* @qede_dcbnl_ieee_peer_getpfc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qede_dcbnl_ieee_peer_getpfc(%struct.net_device* %0, %struct.ieee_pfc* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ieee_pfc*, align 8
  %5 = alloca %struct.qede_dev*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.ieee_pfc* %1, %struct.ieee_pfc** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.qede_dev* @netdev_priv(%struct.net_device* %6)
  store %struct.qede_dev* %7, %struct.qede_dev** %5, align 8
  %8 = load %struct.qede_dev*, %struct.qede_dev** %5, align 8
  %9 = getelementptr inbounds %struct.qede_dev, %struct.qede_dev* %8, i32 0, i32 1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32 (i32, %struct.ieee_pfc*)*, i32 (i32, %struct.ieee_pfc*)** %13, align 8
  %15 = load %struct.qede_dev*, %struct.qede_dev** %5, align 8
  %16 = getelementptr inbounds %struct.qede_dev, %struct.qede_dev* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.ieee_pfc*, %struct.ieee_pfc** %4, align 8
  %19 = call i32 %14(i32 %17, %struct.ieee_pfc* %18)
  ret i32 %19
}

declare dso_local %struct.qede_dev* @netdev_priv(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
